--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@ siginbutton.style.display = 'none'
                             }
                             let signinbutton = document.getElementById('sign_out')
                             signinbutton.style.display = 'none'
+                            let gogoeimage = document.getElementById('googleimage')
+                            gogoeimage.style.display = 'none'
                         });
                     }
 
