--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 <body onload="initGoogleAuth()
 let siginbutton = document.getElementById('sign_out')
 siginbutton.style.display = 'none'
+document.cookie = 'cookie1=SIDCC; SameSite=none; Secure';
+document.cookie = 'cookie2=__Secure-1PSIDCC; SameSite=none; Secure';
+document.cookie = 'cookie3=G_ENABLED_IDPS; SameSite=none; Secure';
+document.cookie = 'cookie4=g_state; SameSite=none; Secure';
 ">
     <header>
         <a href="#" class="logo">Tech Support</a>
