--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <title>Tech Support-CSP Website</title>
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
-    <script src="https://accounts.google.com/gsi/client" async></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type='text/javascript' src='https://apis.google.com/js/platform.js' async defer></script>
+    <script src="client.js" async></script>
+    <script src="jquery.min.js"></script>
+    <script type='text/javascript' src='platform.js' async defer></script>
     <meta name="google-signin-client_id"
         content="125257763090-p5800112ordnelpe23i2lbkavunsv5vq.apps.googleusercontent.com">
     <script>
@@ -27,10 +27,6 @@
 <body onload="initGoogleAuth()
 let siginbutton = document.getElementById('sign_out')
 siginbutton.style.display = 'none'
-document.cookie = 'cookie1=SIDCC; SameSite=none; Secure';
-document.cookie = 'cookie2=__Secure-1PSIDCC; SameSite=none; Secure';
-document.cookie = 'cookie3=G_ENABLED_IDPS; SameSite=none; Secure';
-document.cookie = 'cookie4=g_state; SameSite=none; Secure';
 ">
     <header>
         <a href="#" class="logo">Tech Support</a>
