--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>Tech Support-CSP Website</title>
-    <meta http-equiv="Cross-Origin-Opener-Policy" content="cross-origin-allow-popups">
+    <meta name="referrer" content="no-referrer-when-downgrade">
+    <meta name="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
     <script src="client.js" async></script>
     <script src="jquery.min.js"></script>
     <script type='text/javascript' src='platform.js' async defer></script>
@@ -25,8 +26,8 @@
 </head>
 
 <body onload="initGoogleAuth()
-let siginbutton = document.getElementById('sign_out')
-siginbutton.style.display = 'none'
+let signoutbutton = document.getElementById('sign_out')
+signoutbutton.style.display = 'none'
 ">
     <header>
         <a href="#" class="logo">Tech Support</a>
@@ -38,20 +39,12 @@ siginbutton.style.display = 'none'
                 </div>
 
                 <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_blue"
-                    data-text="signin_with" data-size="large" data-logo_alignment="left">
+                    data-text="signin_with" data-size="large" data-logo_alignment="left"
                 </div>
                 <script>
                     function OnSignIn(googleUser) {
-                        var authInstance = gapi.auth2.getAuthInstance();
-                        if (authInstance.isSignedIn.get()) {
                             document.getElementById('g_id_onload').style.visibility = 'hidden'
-                            document.cookie = 'SIDCC=ACA-OxMycWfUJyob2qLm0gVRVWPhFuLMNCEj2Xx1Uq82p9dyRWkEZoLkQKN9CJUe3ijyXmPM580; SameSite=none; Secure';
-                            document.cookie = '__Secure-1PSIDCC=ACA-OxPV4gENo_BI2gd2pGzrrypYZfQm4CFRILC_LgLvWec3QrZ5XRkwZFwsOPpOGzcYs4gZmw; SameSite=none; Secure';
-                            document.cookie = 'G_ENABLED_IDPS=G_ENABLED_IDPS; SameSite=none; Secure';
-                            document.cookie = 'g_state={"i_l":0}; SameSite=none; Secure';
-                            // The user is signed in
-                            var id_token = authInstance.currentUser.get().getAuthResponse().id_token;
-                            console.log(id_token)
+                            console.log(googleUser)
                             function parseJwt(token) {
                                 var base64Url = token.split('.')[1];
                                 var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
@@ -61,20 +54,13 @@ siginbutton.style.display = 'none'
 
                                 return JSON.parse(jsonPayload);
                             }
-                            const itoken = (parseJwt(id_token));
-                            console.log(itoken.given_name, itoken.family_name)
-                            console.log(itoken.sub)
-                            var gIdSignInElements = document.getElementsByClassName('g_id_signin');
-                            for (var i = 0; i < gIdSignInElements.length; i++) {
-                                gIdSignInElements[i].style.visibility = 'collapse';
-                            }
-                            console.log(authInstance.isSignedIn.get())
+                            let idarray = parseJwt(googleUser.credential)
                             let siginbutton = document.getElementById('sign_out')
                             siginbutton.style.display = 'list-item'
-                            let image = new String(itoken.picture);
+                            let image = new String(idarray.picture);
                             document.getElementById('googleimage').src = image
+                            document.getElementById('sign_in').style.visibility = 'hidden'
                         }
-                    }
                 </script>
             </li>
             <li><img id="googleimage" style="border-radius: 50%; " /></li>
@@ -94,6 +80,7 @@ siginbutton.style.display = 'none'
                             let signinbutton = document.getElementById('sign_out')
                             signinbutton.style.display = 'none'
                             document.getElementById('googleimage').src = 'nothing'
+                            document.getElementById('sign_in').style.visibility = 'visible'
                         });
                     }
 
