--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ signoutbutton.style.display = 'none'
                             let image = new String(idarray.picture);
                             document.getElementById('googleimage').src = image
                             document.getElementById('sign_in').style.visibility = 'hidden'
-                            console.log(googleUser)
+                            console.log(idarray)
                         }
                 </script>
             </li>
