--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ signoutbutton.style.display = 'none'
                             document.getElementById('googleimage').src = image
                             document.getElementById('sign_in').style.visibility = 'hidden'
                             console.log(idarray)
+                            sessionStorage.setItem('idarray')
                         }
                 </script>
             </li>
