--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@ signoutbutton.style.display = 'none'
         <div class="swiper-pagination"></div>
 
         </div>
+
+
+        <a href="editor.php">EDITOR</a>
+
     </body>
     <script src="swiper-bundle.min.js"></script>
 
