--- a/projects.html
+++ b/projects.html
@@ -1,126 +1,18 @@
 <!DOCTYPE html>
-<!--<html>
-
-<head>
-    <title>Projects-CSP Website</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
-<body>
-    <header>
-        <a href="index.html" class="logo">Tech Support</a>
-        <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="#">Login/Sign In</a></li>
-            <li><a href="Contact.html">Contacts</a></li>
-        </ul>
-    </header>
-    <link rel="stylesheet" type="text/css" href="Projects.css">
-    <div id="carouselExampleControls" class="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="card">
-                    <div class="img-wrapper"><img src="building.png" class="d-block w-100" alt="building"> </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Project</h5>
-                        <p class="card-text">Description</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Project</h5>
-                        <p class="card-text">Description</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Project</h5>
-                        <p class="card-text">Description</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Project</h5>
-                        <p class="card-text">Description</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Project</h5>
-                        <p class="card-text">Description</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Project</h5>
-                        <p class="card-text">Description</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Project</h5>
-                        <p class="card-text">Description</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Project</h5>
-                        <p class="card-text">Description</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card">
-                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Project</h5>
-                        <p class="card-text">Description</p>
-                        <a href="#" class="btn btn-primary">View</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <canvas id="webgl"></canvas>
-    <script type="module" src="/three.js"></script> ...-->
-
 <html>
 
 <head>
-    <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
-    <script src="https://accounts.google.com/gsi/client" async></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type='text/javascript' src='https://apis.google.com/js/platform.js' async defer></script>
+    <title>Tech Support-CSP Website</title>
+    <meta name="referrer" content="no-referrer-when-downgrade">
+    <meta name="Cross-Origin-Opener-Policy" content="unsafe-none">
+    <script src="client.js" async></script>
+    <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" contact="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About Us-CSP Website</title>
+
+    <script src="jquery.min.js"></script>
+    <!--<script type='text/javascript' src='platform.js' async defer></script>
     <meta name="google-signin-client_id"
         content="125257763090-p5800112ordnelpe23i2lbkavunsv5vq.apps.googleusercontent.com">
     <script>
@@ -135,16 +27,104 @@
         }
 
     </script>
-    <title>Projects-CSP Website</title>
+-->
     <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
+<style>
+    .aboutlinks{
+    color: purple;
+    }
+</style>
+
+
+<!--
+<body onload="initGoogleAuth()
+let signoutbutton = document.getElementById('sign_out')
+signoutbutton.style.display = 'none'
+">
+-->
+    <header>
+        <a href="#" class="logo">Tech Support</a>
+        <ul>
+           <!--
+            <li id="sign_in">
+                <div id="g_id_onload"
+                    data-client_id="125257763090-p5800112ordnelpe23i2lbkavunsv5vq.apps.googleusercontent.com"
+                    data-context="signin" data-ux_mode="popup" data-callback="OnSignIn" data-auto_prompt="false">
+                </div>
+
+                <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_blue"
+                    data-text="signin_with" data-size="large" data-logo_alignment="left"
+                </div>
+                <script>
+                    function OnSignIn(googleUser) {
+                            document.getElementById('g_id_onload').style.visibility = 'hidden'
+                            console.log(googleUser)
+                            function parseJwt(token) {
+                                var base64Url = token.split('.')[1];
+                                var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+                                var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function (c) {
+                                    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+                                }).join(''));
+
+                                return JSON.parse(jsonPayload);
+                            }
+                            let idarray = parseJwt(googleUser.credential)
+                            let siginbutton = document.getElementById('sign_out')
+                            siginbutton.style.display = 'list-item'
+                            let image = new String(idarray.picture);
+                            document.getElementById('googleimage').src = image
+                            document.getElementById('sign_in').style.visibility = 'hidden'
+                            console.log(idarray)
+                            sessionStorage.setItem('idarray')
+                        }
+                </script>
+            </li>
+            <li><img id="googleimage" style="border-radius: 50%; " /></li>
+        -->
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li>
+                <div class="dropdown">
+                    <span>Other Members ▼</span>
+                    <div class="dropdown-content">
+                      <a class="aboutlinks" href="aboutriyan.php">Riyan A.</a>
+                      <a class="aboutlinks" href="aboutrehan.php">Rehan M.</a>
+                      <a class="aboutlinks" href="aboutamaan.php">Amaan M.</a>
+                      <a class="aboutlinks" href="aboutjason.php">Jason L.</a>
+                      <a class="aboutlinks" href="aboutrishaan.php">Rishaan J.</a>
+                    </div>
+                  </div>
+            </li>
+            <li><a href="Contact.html">Contacts</a></li>
+            <!--<li id="sign_out">
+                <a href="#" onclick="signOut();">Leave</a>
+                <script>
+                    function signOut() {
+                        gapi.auth2.getAuthInstance().signOut().then(function () {
+                            var gIdSignInElements = document.getElementsByClassName('g_id_signin');
+                            console.log('User signed out.');
+                            for (var i = 0; i < gIdSignInElements.length; i++) {
+                                gIdSignInElements[i].style.visibility = 'visible';
+                            }
+                            let signinbutton = document.getElementById('sign_out')
+                            signinbutton.style.display = 'none'
+                            document.getElementById('googleimage').src = 'nothing'
+                            document.getElementById('sign_in').style.visibility = 'visible'
+                        });
+                    }
+
+                </script>
+            -->
+            </li>
+        </ul>
+    </header>
 <body onload="initGoogleAuth()
 let siginbutton = document.getElementById('sign_out')
 siginbutton.style.display = 'none'
 ">
-    <header>
-        <a href="index.html" class="logo">Tech Support</a>
-        <ul>
+    
+            <!--
             <li id="sign_in">
                 <div id="g_id_onload"
                     data-client_id="125257763090-p5800112ordnelpe23i2lbkavunsv5vq.apps.googleusercontent.com"
@@ -185,10 +165,12 @@ siginbutton.style.display = 'none'
                     }
                 </script>
             </li>
+        -->
+        <!--    
             <li><img id="googleimage" style="border-radius: 50%; "/></li>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="Contact.html">Contacts</a></li>
+        -->    
+            
+            <!--
             <li id="sign_out">
                 <a href="#" onclick="signOut();">Leave</a>
                 <script>
@@ -206,8 +188,8 @@ siginbutton.style.display = 'none'
 
                 </script>
             </li>
-        </ul>
-    </header>
+        -->
+   
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <link rel="stylesheet" href="Projects.css">
     <p><br></br></p>
