--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <style>
     .aboutlinks{
     color: purple;
+    font-size: 2.1vh;
     }
 </style>
 
@@ -86,7 +87,7 @@ signoutbutton.style.display = 'none'
             <li><a href="projects.html">Projects</a></li>
             <li>
                 <div class="dropdown">
-                    <span>Other Members ▼</span>
+                    <span>Members ▼</span>
                     <div class="dropdown-content">
                       <a class="aboutlinks" href="aboutriyan.php">Riyan A.</a>
                       <a class="aboutlinks" href="aboutrehan.php">Rehan M.</a>
