--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ signoutbutton.style.display = 'none'
         </div>
 
 
-        <a href="editor.php">EDITOR</a>
+        <a href="password.php">TEAM MEMBERS ONLY</a>
 
     </body>
     <script src="swiper-bundle.min.js"></script>
