--- a/Contact.html
+++ b/Contact.html
@@ -23,25 +23,25 @@
                     </div>
                     <div class="ContactForm">
                         
-                        <from>
+                        <form action="contact.php" method="post">
                             
                             <h2>Send Message</h2>
                             <div class="inputBox">
-                                <input type="text" name="" required="required">
+                                <input type="text" name="fullname" required="required">
                                 <span>Full Name</span>
                             </div>
                             <div class="inputBox">
-                                <input type="text" name="" required="required">
+                                <input type="text" name="email" required="required">
                                 <span>Email</span>
                             </div>
                             <div class="inputBox">
-                                <textarea required="required"></textarea>
+                                <textarea required="required" name="message"></textarea>
                                 <span>Message</span>
                             </div>
                             <div class="inputBox">
-                                <input type="submit" name="" value="Send">
+                                <input type="submit" name="submit" value="Send">
                             </div>                                  
-                        </from>
+                        </form>
                     </div>
                 </div>
 
