--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ signoutbutton.style.display = 'none'
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="VARIN.png" alt="" class="card-img">
+                                <img src="Varin.jpg" alt="" class="card-img">
                             </div>
                         </div>
 
