--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ signoutbutton.style.display = 'none'
                       <a class="aboutlinks" href="aboutrehan.php">Rehan M.</a>
                       <a class="aboutlinks" href="aboutamaan.php">Amaan M.</a>
                       <a class="aboutlinks" href="aboutjason.php">Jason L.</a>
+                      <a class="aboutlinks" href="aboutvarin.php">Varin A</a>
                       <a class="aboutlinks" href="aboutrishaan.php">Rishaan J.</a>
                     </div>
                   </div>
