Projects page wip

--- a/websitedoc.html
+++ b/websitedoc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Our Projects</title>
+    <title>Team Website</title>
     <link rel="stylesheet" type="text/css" href="About.css">
 </head>
 <style>
@@ -44,16 +44,7 @@ p {
     </header>  
      
     <p><br></br></p>
-    <h1 style="color:Dodgerblue; font-size: 300%;" >OUR PROJECTS</h1>
-    <h2 style="background-color:lightskyblue; border-radius: 18px; padding: 4px; " > <a href="websitedoc.html"> -Website-</a> </h2>
-    <p>Our team website is where we document all our progress! </p>
-    <br>
-    <h2 style="background-color: lightskyblue; border-radius: 18px; padding: 4px;" > <a href="gamedoc.html">-PvP Game-</a> </h2>
-    <p>This fighting game pits two players against each other to test their knowledge! </p>
-    <br>
-    <h2 style="background-color: lightskyblue; border-radius: 18px; padding: px;" > <a href="thirdprojdoc.html"> -Under Construction-</a> </h2>
-    <p>More Details Coming Soon!</p>
-    <br>
+    <h1 style="color:Dodgerblue; font-size: 300%;" >Team Website</h1>
         
 
 <html lang="en">
