--- a/projects.html
+++ b/projects.html
@@ -30,9 +30,10 @@ p {
             <li><a href="Contact.html">Contacts</a></li>
             <li>
                 <div class="dropdown">
-                    <span>Other Members ▼</span>
+                    <span>Our Members ▼</span>
                     <div class="dropdown-content">
                       <a class="aboutlinks" href="aboutriyan.php">Riyan A.</a>
+                      <a class="aboutlinks" href="aboutamaan.php">Amaan M.</a>
                       <a class="aboutlinks" href="aboutrehan.php">Rehan M.</a>
                       <a class="aboutlinks" href="aboutvarin.php">Varin A.</a>
                       <a class="aboutlinks" href="aboutjason.php">Jason L.</a>
@@ -51,8 +52,8 @@ p {
     <h2 style="background-color: lightskyblue; border-radius: 18px; padding: 4px;" > <a href="gamedoc.html">-PvP Game-</a> </h2>
     <p>This fighting game pits two players against each other to test their knowledge! </p>
     <br>
-    <h2 style="background-color: lightskyblue; border-radius: 18px; padding: px;" > <a href="thirdprojdoc.html"> -Under Construction-</a> </h2>
-    <p>More Details Coming Soon!</p>
+    <h2 style="background-color: lightskyblue; border-radius: 18px; padding: px;" > <a href="thirdprojdoc.html"> -AR Glasses-</a> </h2>
+    <p>The AR Glasses provide a Heads Up Display!</p>
     <br>
         
 
