--- a/gamedoc.html
+++ b/gamedoc.html
@@ -10,6 +10,16 @@
     h1 {
   text-align: center;
 }
+.helloworld{
+    text-align: center;
+    border: 8px;
+    border-radius: 8px;
+    border-color: darkslategray;
+    
+}
+.video{
+    text-align: center;
+}
 h2 {
   text-align: center;
   text-decoration:none;
@@ -89,5 +99,19 @@ p {
             The main challenge in making this section of the game was in creating a variable that could be accessed by all gameObjects, which we solved by using the static type. Using a control variable and string functions to create a scoreboard, and an array to sort the questions, the two player Quiz game was created. The questions were created by ourselves. 
 
         </p>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br></br>
+        <br>
+        <br>
+        <div class="helloworld">
+        <video width="960" height="720" controls>
+            <source src="gamedocvid.mp4" type="video/mp4">
+        </video>
+        </div>
 </body>
 </html>
